# DG

./: CMakeLists.txt  CMakeLists_Release.txt  README.md  tmp
CMake/: CMakeCache.txt  CompilerSettings.cmake  FindMPI.cmake  XFlowDeps.cmake  XFlowDirs.cmake
CMake/.svn/: entries
CMake/.svn/text-base/: CompilerSettings.cmake.svn-base  FindMPICH.cmake.svn-base  FindParmetis.cmake.svn-base  UnitTest.cmake.svn-base  XFlowDeps.cmake.svn-base
demo/2D_flow_over_cylind/: bump.job  cylind_0.xfa  cylind_quad.gri  log  model.yu  run
demo/HIT/comp/: .gitattributes  DomainIntg_rhoRMS.dat.p1  DomainIntg_rhoRMS.dat.p2.new  DomainIntg_rhoRMS.dat.p4  PlotScal.r  ProcessTests.py  RunScalTests.py  RunTests.py  baseline.csv  box16elem.gri  box32elem.gri  box8elem.gri  bump.eqn  bump.job  bump_0.xfa  bump_final.xfa  bump_run.job  bump_template.job  ffs.err  ffs.out  gmon.out  jobDescriptions  lydg.script  lydg_run.script  lydg_template.script  model.yu  plot.eps  pprofile_5nodes_12ppn_qsub  pprofile_5nodes_12ppn_qsubI  prun  run
demo/HIT/comp/bump/: bump.93585.job  bump.93643.job
demo/HIT/comp/logs/: 92695.certainty-fe.stanford.edu  92901.certainty-fe.stanford.edu  92902.certainty-fe.stanford.edu  92903.certainty-fe.stanford.edu  92939.certainty-fe.stanford.edu  92940.certainty-fe.stanford.edu  92941.certainty-fe.stanford.edu  92978.certainty-fe.stanford.edu  92979.certainty-fe.stanford.edu  (+46 more)
demo/HIT/comp/p4/: post.m  (+2 more)
demo/shockvortx/: bump.job  bump_0.xfa  bump_U0.data  bump_U1.data  bump_U10.data  bump_U2.data  bump_U3.data  bump_U4.data  bump_U5.data  bump_U6.data  bump_U7.data  bump_U8.data  bump_U9.data  gmon.out  log  lydg.script  model.yu  model.yu_old  prun  run  shockV.gri
include/: Yu_DiffusDiscret.h  functions.txt  sample1.h  xf.h  xfYu_AdaptSolver.h  xfYu_EntropyBounding.h  xfYu_Limiter.h  xfYu_Model.h  xfYu_ModelStruct.h  xfYu_Residual.h  xfYu_Solver.h  xfYu_Statistics.h  xf_Adapt.h  xf_AllPull.h  xf_AllStruct.h  xf_Basis.h  xf_BasisFcn.h  xf_BasisStruct.h  xf_Data.h  xf_EigSolver.h  xf_EqnSet.h  xf_EqnSetHook.h  xf_GeomAnalytical.h  xf_GeomIO.h  xf_GeomSpline.h  xf_IO.h  xf_LinQueueStruct.h  xf_Line.h  xf_LinearSolver.h  xf_LinearSolverStruct.h  xf_Log.h  xf_MPIStruct.h  xf_MRCommon.h  xf_Math.h  xf_MathBlas.h  xf_MathLapack.h  xf_MeshBamgStruct.h  xf_MeshMotionGCL.h  xf_MeshMotionStruct.h  xf_MeshParallel.h  (+20 more)
include/.svn/: entries
include/.svn/text-base/: xf_Adapt.h.svn-base  xf_AdaptHang.h.svn-base  xf_AdaptStruct.h.svn-base  xf_All.h.svn-base  xf_AllPullStruct.h.svn-base  xf_AllStruct.h.svn-base  xf_Arg.h.svn-base  xf_Basis.h.svn-base  xf_BasisStruct.h.svn-base  xf_Data.h.svn-base  xf_DataMath.h.svn-base  xf_DataParallel.h.svn-base  xf_DataStruct.h.old.svn-base  xf_DataStruct.h.svn-base  xf_Dynamic.h.svn-base  xf_DynamicStruct.h.svn-base  xf_EigSolverStruct.h.svn-base  xf_EqnSetHook.h.svn-base  xf_EqnSetStruct.h.svn-base  xf_ErrEst.h.svn-base  xf_Error.h.svn-base  xf_Geom.h.svn-base  xf_GeomPanel.h.svn-base  xf_GeomStruct.h.svn-base  xf_Heap.h.svn-base  xf_HeapStruct.h.svn-base  xf_InverseIC_Common.h.svn-base  xf_LeanSolver.h.svn-base  xf_LinQueue.h.svn-base  xf_LineSearch.h.svn-base  xf_LineStruct.h.svn-base  xf_MPI.h.svn-base  xf_MRStruct.h.svn-base  xf_Math.h.svn-base  xf_MathBlas.h.svn-base  xf_MathLapack.h.svn-base  xf_Memory.h.svn-base  xf_Mesh.h.svn-base  xf_MeshBamg.h.svn-base  xf_MeshDistance.h.svn-base  (+22 more)
prog/: CMakeLists.txt  xf_AdaptToVol.c  xf_AlterState.c  xf_DataCompareDiffMesh.c  xf_Edit.c  xf_FigureOut.c  xf_GeomConvert.c  xf_ICSensitivity.c  xf_Info.c  xf_InverseIC.c  xf_InverseIC_Common.c  xf_MRCommon.c  xf_MRTest.c  xf_Plot.c  xf_Pot2Vel.c  xf_Refine.c  xf_SteadyContinue.c  xf_Tecout.c  xf_WriteOperators.c  xf_XFlow.c
prog/.svn/: entries
prog/.svn/text-base/: CMakeLists.txt.svn-base  Makefile.svn-base  xf_Arg.c.svn-base  xf_Convert.c.svn-base  xf_Data2Text.c.svn-base  xf_DataCompare.c.svn-base  xf_DataOper.c.svn-base  xf_DataPeel.c.svn-base  xf_EigSolve.c.svn-base  xf_InverseIC_MCMC.c.svn-base  xf_InverseIC_MCMCEnsemble.c.svn-base  xf_MRHessianIC.c.svn-base  xf_MROffline.c.svn-base  xf_MROnline.c.svn-base  xf_MRReconstruct.c.svn-base  xf_MeshStats.c.svn-base  xf_Plot.c.svn-base  xf_Post.c.svn-base  xf_StructuredHO.c.svn-base  xf_TecOut.c.svn-base  xf_XFlow.c.svn-base
src/: Yu_DiffusDiscret.c  fileNames  sample1.c  xfYu_AdaptSolver.c  xfYu_AdaptSolver_new_v2.c  xfYu_AdaptSolver_new_v3.c  xfYu_AdaptSolver_new_v4.c  xfYu_AdaptSolver_new_v5.c  xfYu_AdaptSolver_orig.c  xfYu_Adaption.c  xfYu_Basis.c  xfYu_BasisFcn.c  xfYu_EntropyBounding.c  xfYu_Initialization.c  xfYu_Limiter.c  xfYu_Model.c  xfYu_Residual.c  xfYu_RiemannSolver.c  xfYu_Solver.c  xfYu_Statistics.c  xf_Adapt.c  xf_Adapt.test.c  xf_AdaptHang.test.c  xf_All.c  xf_AllPull.c  xf_Basis.c  xf_Basis.test.c  xf_BasisFcn.c  xf_Data.c  xf_DataMath.c  xf_DataParallel.c  xf_Dynamic.c  xf_EigSolver.c  xf_ErrEst.c  xf_Error.c  xf_Geom.c  xf_GeomPanel.c  xf_GeomSpline.c  xf_Heap.c  xf_Heap.test.c  (+42 more)
src/.svn/: entries
src/.svn/text-base/: Makefile.in.svn-base  Makefile.svn-base  xf_Adapt.c.svn-base  xf_AdaptHang.c.svn-base  xf_All.c.svn-base  xf_Basis.c.svn-base  xf_BasisFcn.test.c.svn-base  xf_Data.c.svn-base  xf_DataMath.c.svn-base  xf_DataMath.test.c.svn-base  xf_EigSolver.test.c.svn-base  xf_EqnSet.c.svn-base  xf_EqnSetHook.c.svn-base  xf_ErrEst.test.c.svn-base  xf_GeomAnalytical.c.svn-base  xf_GeomIO.c.svn-base  xf_IO.c.svn-base  xf_LeanSolver.c.svn-base  xf_Line.test.c.svn-base  xf_LinearSolver.c.svn-base  xf_LinearSolver.test.c.svn-base  xf_Log.c.svn-base  xf_MPI.c.svn-base  xf_Math.c.svn-base  xf_MathBlas.c.svn-base  xf_MathLapack.c.svn-base  xf_MathNoLapack.c.svn-base  xf_Memory.c.svn-base  xf_Mesh.c.svn-base  xf_MeshDistance.c.svn-base  xf_MeshFmsh.c.svn-base  xf_MeshGmsh.c.svn-base  xf_MeshMotion.c.svn-base  xf_MeshMotionAnalytical.test.c.svn-base  xf_MeshMotionGCL.c.svn-base  xf_MeshMotionIO.c.svn-base  xf_MeshParallel.c.svn-base  xf_MeshTools.c.svn-base  xf_MeshToolsElemSearch.c.svn-base  xf_Output.c.svn-base  (+17 more)
test/: Makefile  UnitTest.h  convertTest.py  math_unittest  math_unittest.cc
(+46 files in other folders)
